# clientpp

./: .gitignore  .gitmodules  AimFreeze.md  CMakeLists.txt  Chief Client++.sln  Guru Client++.sln  LICENSE  README.md  legacyUserscript.ts  packages.config  webview2-processes.ps1
Archive/: WSFix.js
Client/: AccountManager.cpp  AccountManager.h  Bootstrap.js  Client.cpp  Client.h  Client.vcxproj  Client.vcxproj.filters  ClientFolder.cpp  ClientFolder.h  Config.json  Consts.cpp  Consts.h  DefaultUserscript.json  IPCMessages.cpp  IPCMessages.h  JSMessage.cpp  JSMessage.h  KrunkerWindow.cpp  KrunkerWindow.h  LoadRes.cpp  LoadRes.h  LobbySeeker.cpp  LobbySeeker.h  Log.cpp  Log.h  Main.cpp  Points.cpp  Points.h  Resource.aps  Resource.rc  RuntimeData.cpp  SeekGame.cpp  Socket.cpp  Socket.h  TraverseCopy.cpp  TraverseCopy.h  Updater.cpp  Updater.h  WebView2Installer.cpp  WebView2Installer.h  (+5 more)
Client/Styles/: Client.css  Client.vcxproj.filters
DiscordRPC/: connection_unix.cpp  discord_register_linux.cpp  discord_rpc.cpp  serialization.h
Docs/: AimFreeze.md
Images/: Icon.pdn  IconSizes.pdn
OpenSSL/: OpenSSL.props
OpenSSL/include/openssl/: x509_vfy.h
Resources/: Client.css  Config.json  Error.html
Scripts/: Adblock.js  Sky Color.js
Utils/: Base64.cpp  IOUtil.cpp  IOUtil.h  JSON.h  StringUtil.cpp  StringUtil.h  Uri.cpp  Uri.h
Webpack/: .eslintrc.json  EnumLoader.js  IPCMessagesLoader.cjs  ModifyPlugin.js  css.js  index.js  package-lock.json  package.json  webpack.config.js
Webpack/src/: AccountManager.css  AccountManager.js  ChiefUserscript.js  Console.js  Consts.js  DataStore.js  Events.js  FastLoad.js  FilePicker.js  FixLoad.js  Fixes.js  HTMLProxy.js  IPC.js  IPCConsole.js  Keybind.js  LegacyUserscript.js  Meta.json  RPC.js  Resources.js  Runtime.js  SiteLocation.js  TableControl.js  Userscript.js  Utils.js  WSWorker.js  index.js
Webpack/src/MenuUI/: Control.js  MenuButton.js
Webpack/src/MenuUI/Window/: index.js
Webpack/src/MenuUI/addons/: settings.js
Webpack/src/libs/: Events.js  ExtendMenu.js  HTMLProxy.js  Hex3.js  IPC.js  Keybind.js  Loader.js  Request.js  Utils.js
Webpack/src/libs/MenuUI/: Addon.js  Control.js  HeaderWindow.js  MenuButton.js  Tab.js  TabWindow.js  consts.js  index.js
Webpack/src/libs/MenuUI/Window/: Category.js  Tab.js  index.js
Webpack/src/libs/MenuUI/addons/: discord.js  (+1 more)
discord-rpc-lib/: CMakeLists.txt
discord_rpc/: CMakeLists.txt  backoff.h  connection_unix.cpp  connection_win.cpp  discord_register_linux.cpp  discord_register_win.cpp  discord_rpc.cpp  dllmain.cpp  msg_queue.h  rpc_connection.cpp  rpc_connection.h  serialization.cpp  serialization.h
docs/: InputLag.md
frontend/: .eslintrc.json  .prettierrc.json  TryCatchWebpackPlugin.ts  css-loader.d.ts  css.cjs  ipc-messages.js  ipc-messages.mjs  package-lock.json  package.json  rollup.config.js  swcrc.d.ts  tryCatch.js  tsconfig.json  webpack.config.ts
frontend/src/: AccountManager.js  ChiefUserscript.js  Console.js  EventEmitter.ts  FilePicker.js  Fixes.js  Hex3.ts  IPC.js  IPCMessages.ts  Keybind.ts  LegacyUserscript.js  RPC.js  RPC.ts  Resources.js  Runtime.js  chiefUserscript.ts  console.ts  fixes.ts  game.ts  generic.ts  index.js  index.ts  ipc.ts  keybinds.ts  menu.ts  react-env.d.ts  resources.ts  runtime.ts  setLocalStorage.ts  site.ts  tampermonkey.ts  useLocalStorage.ts  userscript.d.ts  utils.ts
frontend/src/MenuUI/: Addon.js  Control.js  Sound.js  TabWindow.js  index.js
frontend/src/MenuUI/Window/: Category.js  index.js
frontend/src/MenuUI/addons/: settings.js
frontend/src/libs/: Events.js  ExtendMenu.js  Hex3.js  Keybind.js  Utils.js
frontend/src/libs/MenuUI/: Control.js  HeaderWindow.js  Tab.js  TabWindow.js  index.js
frontend/src/menu/: AccountManager.tsx  AddAccount.tsx  Debug.tsx  Menu.tsx  createUI.tsx  extendSettings.ts  extendWindows.ts  feedback.ts  newMenu.tsx  renderContainer.ts  settHolderProxy.ts  useConfig.ts  watermark.ts  window.d.ts
frontend/src/menu/components/: Button.tsx  ButtonControl.tsx  ColorControl.tsx  ColorPicker.tsx  Control.tsx  FileControl.tsx  FilePath.tsx  FilePathControl.tsx  FilePicker.tsx  Link.tsx  LinkControl.tsx  Select.tsx  SelectControl.tsx  Set.tsx  Slider.tsx  SliderControl.tsx  Switch.tsx  SwitchControl.tsx  Text.tsx  TextControl.tsx
frontend/src/runtime/: chief.ts  chiefCommon.ts  common.ts  idkr.ts  idkr.tsx  idkrCommon.ts  tampermonkey.ts
frontend/src/runtime/game/: chief.ts  chief.tsx  idkr.tsx
frontend/types/match-pattern/: index.d.ts
frontend/types/react-dev-utils/: ModuleNotFoundPlugin.d.ts  getCSSModuleLocalIdent.d.ts
images/: icon-sizes.pdn
include/: discord_rpc.h  http_nostl.h  http_stl.h  net.h  semver.hpp
libs/Debug/: libssl-1_1-static.lib  libz-static.lib
libs/Release/: libz-static.lib
resources/: AccountManager.css  DefaultUserscript.json  bootstrap.js  client.css  config.json  game.css  userscript-schema.json
scripts/: Adblock.js  Sky Color.js  adblock.chief.js  example.idkr.js  logo changer.chief.js  old example.idkr.js  selectable chat.idkr.js
src/: AccountManager.cpp  AccountManager.h  CMakeLists.txt  ChGameWindow.cpp  ChGameWindow.h  ChScriptedWindow.cpp  ChScriptedWindow.h  ChWindow.cpp  ChWindow.h  ChWindows.cpp  Client.cpp  Client.h  Client.vcxproj  Client.vcxproj.filters  ClientFolder.cpp  ClientFolder.h  IPCMessages.cpp  IPCMessages.h  JSMessage.cpp  JSMessage.h  KrunkerWindow.cpp  KrunkerWindow.h  LoadRes.cpp  LoadRes.h  LobbySeeker.cpp  LobbySeeker.h  Log.cpp  Log.h  Points.cpp  Points.h  Resource.rc  RuntimeData.cpp  Site.cpp  Site.h  TraverseCopy.cpp  TraverseCopy.h  Updater.cpp  Updater.h  WebView2Installer.cpp  WebView2Installer.h  (+9 more)
uriparser-lib/: CMakeLists.txt
utils/: Base64.cpp  Base64.h  EncodeURI.cpp  EncodeURI.h  IOUtil.cpp  IOUtil.h  JsonUtil.cpp  JsonUtil.h  StringUtil.cpp  StringUtil.h  Uri.cpp  Uri.h
webpack/: .eslintrc.json  webpack.config.js
webpack/src/: AccountManager.css  ChiefUserscript.js  Fixes.js  IPC.js  LegacyUserscript.js  Resources.js
webpack/src/libs/MenuUI/: Control.js  HeaderWindow.js  MenuButton.js  Sound.js
(+6 files in other folders)
